--- a/가위바위보.ipynb
+++ b/가위바위보.ipynb
@@ -18,8 +18,139 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "'가위', '바위', '보'를 입력하세요. 종료하려면 '종료'입력 -1\n",
-      "'가위', '바위', '보'를 입력하세요. 종료하려면 '종료'입력 종료\n"
+      "'가위', '바위', '보'를 입력하세요. 종료하려면 '종료'입력 가위\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "컴퓨터 승!\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "'가위', '바위', '보'를 입력하세요. 종료하려면 '종료'입력 보\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "user 승!\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "'가위', '바위', '보'를 입력하세요. 종료하려면 '종료'입력 보\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "user 승!\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "'가위', '바위', '보'를 입력하세요. 종료하려면 '종료'입력 보\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "user 승!\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "'가위', '바위', '보'를 입력하세요. 종료하려면 '종료'입력 보\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "user 승!\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "'가위', '바위', '보'를 입력하세요. 종료하려면 '종료'입력 보\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "user 승!\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "'가위', '바위', '보'를 입력하세요. 종료하려면 '종료'입력 가위\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "컴퓨터 승!\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "'가위', '바위', '보'를 입력하세요. 종료하려면 '종료'입력 주먹\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'가위', '바위', '보'를 입력해주세요\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "'가위', '바위', '보'를 입력하세요. 종료하려면 '종료'입력 바위\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "비겼습니다\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "Interrupted by user",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 12\u001b[0m\n\u001b[0;32m      9\u001b[0m     comp \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m보\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m(\u001b[38;5;241m1\u001b[39m):\n\u001b[1;32m---> 12\u001b[0m     user \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m가위\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m, \u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m바위\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m, \u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m보\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m를 입력하세요. 종료하려면 \u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m종료\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m입력\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m    \u001b[38;5;66;03m#유저 입력\u001b[39;00m\n\u001b[0;32m     13\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m(user \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m종료\u001b[39m\u001b[38;5;124m\"\u001b[39m):    \u001b[38;5;66;03m#종료\u001b[39;00m\n\u001b[0;32m     14\u001b[0m             \u001b[38;5;28;01mbreak\u001b[39;00m\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\ipykernel\\kernelbase.py:1270\u001b[0m, in \u001b[0;36mKernel.raw_input\u001b[1;34m(self, prompt)\u001b[0m\n\u001b[0;32m   1268\u001b[0m     msg \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mraw_input was called, but this frontend does not support input requests.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   1269\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m StdinNotImplementedError(msg)\n\u001b[1;32m-> 1270\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_input_request\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m   1271\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mprompt\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   1272\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_parent_ident\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mshell\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   1273\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_parent\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mshell\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   1274\u001b[0m \u001b[43m    \u001b[49m\u001b[43mpassword\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[0;32m   1275\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\ipykernel\\kernelbase.py:1313\u001b[0m, in \u001b[0;36mKernel._input_request\u001b[1;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[0;32m   1310\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m:\n\u001b[0;32m   1311\u001b[0m     \u001b[38;5;66;03m# re-raise KeyboardInterrupt, to truncate traceback\u001b[39;00m\n\u001b[0;32m   1312\u001b[0m     msg \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInterrupted by user\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m-> 1313\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m(msg) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m   1314\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m:\n\u001b[0;32m   1315\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlog\u001b[38;5;241m.\u001b[39mwarning(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInvalid Message:\u001b[39m\u001b[38;5;124m\"\u001b[39m, exc_info\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
      ]
     }
    ],
@@ -35,29 +166,32 @@
     "    comp = \"보\"\n",
     "    \n",
     "while(1):\n",
-    "    user = input(\"'가위', '바위', '보'를 입력하세요. 종료하려면 '종료'입력\")\n",
-    "    if(user == \"종료\"):\n",
-    "        break\n",
-    "    if(user == comp):\n",
-    "        print(\"비겼습니다\")\n",
+    "    user = input(\"'가위', '바위', '보'를 입력하세요. 종료하려면 '종료'입력\")    #유저 입력\n",
+    "    if(user == \"종료\"):    #종료\n",
+    "            break\n",
+    "    if(user in [\"가위\", \"바위\", \"보\"]):    #오류처리\n",
+    "        if(user == comp):\n",
+    "            print(\"비겼습니다\")\n",
+    "        else:\n",
+    "            if(user==\"가위\"):\n",
+    "                if(comp ==\"바위\"):\n",
+    "                    print(\"컴퓨터 승!\")\n",
+    "                else:\n",
+    "                    print(\"user 승!\")\n",
+    "                       \n",
+    "            elif(user==\"바위\"):\n",
+    "                if(comp==\"보\"):\n",
+    "                    print(\"컴퓨터 승!\")\n",
+    "                else:\n",
+    "                    print(\"user 승!\")\n",
+    "                \n",
+    "            elif(user==\"보\"):\n",
+    "                if(comp==\"가위\"):\n",
+    "                    print(\"컴퓨터 승!\")\n",
+    "                else:\n",
+    "                    print(\"user 승!\")\n",
     "    else:\n",
-    "        if(user==\"가위\"):\n",
-    "            if(comp ==\"바위\"):\n",
-    "                print(\"컴퓨터 승!\")\n",
-    "            else:\n",
-    "                print(\"user 승!\")\n",
-    "                   \n",
-    "        elif(user==\"바위\"):\n",
-    "            if(comp==\"보\"):\n",
-    "                print(\"컴퓨터 승!\")\n",
-    "            else:\n",
-    "                print(\"user 승!\")\n",
-    "            \n",
-    "        elif(user==\"보\"):\n",
-    "            if(comp==\"가위\"):\n",
-    "                print(\"컴퓨터 승!\")\n",
-    "            else:\n",
-    "                print(\"user 승!\")\n",
+    "        print(\"'가위', '바위', '보'를 입력해주세요\")\n",
     "            \n",
     "        \n",
     "\n",
@@ -67,125 +201,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "939a14a6-fdd5-41ca-ab8e-5c912fe89f36",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['__add__',\n",
-       " '__class__',\n",
-       " '__contains__',\n",
-       " '__delattr__',\n",
-       " '__dir__',\n",
-       " '__doc__',\n",
-       " '__eq__',\n",
-       " '__format__',\n",
-       " '__ge__',\n",
-       " '__getattribute__',\n",
-       " '__getitem__',\n",
-       " '__getnewargs__',\n",
-       " '__getstate__',\n",
-       " '__gt__',\n",
-       " '__hash__',\n",
-       " '__init__',\n",
-       " '__init_subclass__',\n",
-       " '__iter__',\n",
-       " '__le__',\n",
-       " '__len__',\n",
-       " '__lt__',\n",
-       " '__mod__',\n",
-       " '__mul__',\n",
-       " '__ne__',\n",
-       " '__new__',\n",
-       " '__reduce__',\n",
-       " '__reduce_ex__',\n",
-       " '__repr__',\n",
-       " '__rmod__',\n",
-       " '__rmul__',\n",
-       " '__setattr__',\n",
-       " '__sizeof__',\n",
-       " '__str__',\n",
-       " '__subclasshook__',\n",
-       " 'capitalize',\n",
-       " 'casefold',\n",
-       " 'center',\n",
-       " 'count',\n",
-       " 'encode',\n",
-       " 'endswith',\n",
-       " 'expandtabs',\n",
-       " 'find',\n",
-       " 'format',\n",
-       " 'format_map',\n",
-       " 'index',\n",
-       " 'isalnum',\n",
-       " 'isalpha',\n",
-       " 'isascii',\n",
-       " 'isdecimal',\n",
-       " 'isdigit',\n",
-       " 'isidentifier',\n",
-       " 'islower',\n",
-       " 'isnumeric',\n",
-       " 'isprintable',\n",
-       " 'isspace',\n",
-       " 'istitle',\n",
-       " 'isupper',\n",
-       " 'join',\n",
-       " 'ljust',\n",
-       " 'lower',\n",
-       " 'lstrip',\n",
-       " 'maketrans',\n",
-       " 'partition',\n",
-       " 'removeprefix',\n",
-       " 'removesuffix',\n",
-       " 'replace',\n",
-       " 'rfind',\n",
-       " 'rindex',\n",
-       " 'rjust',\n",
-       " 'rpartition',\n",
-       " 'rsplit',\n",
-       " 'rstrip',\n",
-       " 'split',\n",
-       " 'splitlines',\n",
-       " 'startswith',\n",
-       " 'strip',\n",
-       " 'swapcase',\n",
-       " 'title',\n",
-       " 'translate',\n",
-       " 'upper',\n",
-       " 'zfill']"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dir(str)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "50f1eef1-fa47-4bfd-900e-7817e946f4e7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "58dcc962-5872-48a8-ab34-a075a95af4c3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "395ab07b-9136-4296-bf23-e258b103b358",
+   "id": "9500c7b6-61b8-40bd-b3d1-73718661077b",
    "metadata": {},
    "outputs": [],
    "source": []
