--- a/가위바위보.ipynb
+++ b/가위바위보.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "dd7f5cbb-af5e-4832-81d3-0f7bbff2d49f",
    "metadata": {},
    "outputs": [
@@ -18,84 +18,7 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "'가위', '바위', '보'를 입력하세요. 종료하려면 '종료'입력 가위\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "컴퓨터 승!\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "'가위', '바위', '보'를 입력하세요. 종료하려면 '종료'입력 바위\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "컴퓨터 승!\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "'가위', '바위', '보'를 입력하세요. 종료하려면 '종료'입력 바위\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "비겼습니다\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "'가위', '바위', '보'를 입력하세요. 종료하려면 '종료'입력 바위\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "비겼습니다\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "'가위', '바위', '보'를 입력하세요. 종료하려면 '종료'입력 바위\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "컴퓨터 승!\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "'가위', '바위', '보'를 입력하세요. 종료하려면 '종료'입력 바위\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "user 승!\n"
+      "'가위', '바위', '보'를 입력하세요. 종료하려면 '종료'입력 종료\n"
      ]
     }
    ],
@@ -136,20 +59,8 @@
     "                else:\n",
     "                    print(\"user 승!\")\n",
     "    else:\n",
-    "        print(\"'가위','바위','보'를 입력해주세요\")\n",
-    "            \n",
-    "    \n",
-    "    \n",
-    "          "
+    "        print(\"'가위','바위','보'를 입력해주세요\")      "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "59e56177-9c24-4845-8d69-7947009e2cb0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
