--- a/가위바위보.ipynb
+++ b/가위바위보.ipynb
@@ -25,6 +25,9 @@
    "source": [
     "import random as rd\n",
     "\n",
+    "win_count = int(input(\"승리 횟수를 입력하세요:\"))   #승리횟수 입력\n",
+    "\n",
+    "\n",
     "while(1):\n",
     "    n = rd.randint(1,3)  #컴퓨터 가위,바위,보 랜덤 배정\n",
     "    if(n==1):    \n",
@@ -38,28 +41,34 @@
     "    if(user == \"종료\"):\n",
     "            break\n",
     "    if(user in [\"가위\",\"바위\",\"보\"]): \n",
-    "        if(user == comp):\n",
+    "        if(user == comp):  \n",
     "            print(\"비겼습니다\")\n",
     "        else:\n",
     "            if(user==\"가위\"):\n",
     "                if(comp ==\"바위\"):\n",
     "                    print(\"컴퓨터 승!\")\n",
+    "                    \n",
     "                else:\n",
     "                    print(\"user 승!\")\n",
+    "                    win_count=win_count-1\n",
     "                       \n",
     "            elif(user==\"바위\"):\n",
     "                if(comp==\"보\"):\n",
     "                    print(\"컴퓨터 승!\")\n",
     "                else:\n",
     "                    print(\"user 승!\")\n",
+    "                    win_count=win_count-1\n",
     "                \n",
     "            elif(user==\"보\"):\n",
     "                if(comp==\"가위\"):\n",
     "                    print(\"컴퓨터 승!\")\n",
     "                else:\n",
     "                    print(\"user 승!\")\n",
+    "                    win_count=win_count-1\n",
     "    else:\n",
-    "        print(\"'가위','바위','보'를 입력해주세요\")      "
+    "        print(\"'가위','바위','보'를 입력해주세요\")  \n",
+    "    if(win_count==0):     #승리횟수를 다 채우면 그만 하기\n",
+    "        break"
    ]
   }
  ],
