--- a/가위바위보.ipynb
+++ b/가위바위보.ipynb
@@ -10,10 +10,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "dd7f5cbb-af5e-4832-81d3-0f7bbff2d49f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "승리 횟수를 입력하세요: 2\n",
+      "'가위', '바위', '보'를 입력하세요. 종료하려면 '종료'입력 가위\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "user 승!\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "'가위', '바위', '보'를 입력하세요. 종료하려면 '종료'입력 가위\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "user 승!\n",
+      "user 최종 승!\n"
+     ]
+    }
+   ],
    "source": [
     "import random as rd\n",
     "\n",
